$Id$

****************************** DRUPAL 5 BRANCH ********************************

September 2, 2008
-----------------
#NOISSUE by Michelle: Fixed joined date to not use hardcoded format. Regex provided by Morbus.
#NOISSUE by Michelle: Re-arranged functions and cleaned up some comments.
#268684 by Michelle: Removed old themes directory.
#268684 by Michelle: Switched to using styles.  (Theme changes: Numerous. Will have docs by next alpha.)
#268684 by Michelle: Backport: Cleaned up advf-forum-topic-list.tpl.php and moved some logic into the preprocess.
#268684 by Michelle: Backport: Added classes to table header for topic list and cleaned up empty fields.
#238668 by ixeft, Michelle: Backport: Added N new posts to forum overview. 
#268684 by Michelle: Added code to change forum icon when new posts. 
#268684 by Michelle: Added new forum icons.
#268684 by Michelle: Changed "mark as read" to use new icon.
#301089 by George2: Only print title div if there is a title on the comment.
#NOISSUE by Michelle: Changed "ago" to showing actual dates when over 48 hours.
#302125 by IceCreamYou, Michelle: Added facebook status support.

August 21, 2008
---------------
#295562 by catch: Make 'views' column in topic list statistics.module dependent.

August 19, 2008
--------------
#266003 by Michelle: Fixed issue with forum posts not showing as teasers inside of other nodes.
#268684 by Michelle, stephthegeek: Backported changes made to D6 last week.

August 9, 2008
--------------
#291597 by rallycivic: Put nid first in query to make db_rewrite_sql happy.
#276232 by Michelle. Fixed wrong variable in all of the user info code which made the whole user info side all wrong.
#207920 by Michelle: Better documented use of $profile variable. (Theme changes: advf-forum-user.tpl.php)
No issue by Michelle: Fixed anonymous commenters having user info showing.
#248815 by Michelle, Funkymoses: Changed CSS for avatar. (Theme changes: advanced_forum-structure.css)

August 2, 2008
--------------